moved command line tool to Java 17; turned --enable-preview off.